--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<!-- Навигационная панель -->
-	<nav class="navbar">
+	<header class="navbar">
 		<div class="container">
 			<div class="navbar-wrap">
 				<div class="navbar__logo">
@@ -32,7 +32,7 @@
 			<!-- /.navbar-wrap -->
 		</div>
 		<!-- /.container -->
-	</nav>
+	</header>
 	<!-- /.navbar -->
 
 	<!-- Заглавная секция -->
